--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,6 @@ entity_registry.yaml
 .zamg-stations.json.gz
 weather_animated
 .config_entries.json
+ui-lovelace.yaml
+core.config_entries
+hacp.html
