--- a/customize.yaml
+++ b/customize.yaml
@@ -202,6 +202,9 @@ switch.playstation_4:
 switch.braviatv_2:
   friendly_name: !secret tv_tv2_name
   homebridge_hidden: true
+switch.developer_mode:
+  icon: mdi:auto-fix
+  homebridge_hidden: true
 
 ###Zones
 zone.work_1:
