--- a/switch.yaml
+++ b/switch.yaml
@@ -31,16 +31,16 @@
         service: media_player.turn_off
         data:
           entity_id: media_player.braviatv_2
-    mpd:
-      value_template: "{{ is_state('media_player.mpd', 'playing')}}"
-      turn_on:
-        service: media_player.turn_on
-        data:
-          entity_id: media_player.mpd
-      turn_off:
-        service: media_player.turn_off
-        data:
-          entity_id: media_player.mpd
+    #mpd:
+    #  value_template: "{{ is_state('media_player.mpd', 'playing')}}"
+    #  turn_on:
+    #    service: media_player.turn_on
+    #    data:
+    #      entity_id: media_player.mpd
+    #  turn_off:
+    #    service: media_player.turn_off
+    #    data:
+    #      entity_id: media_player.mpd
     playstation_4:
       value_template: >
         {% if is_state('media_player.playstation_4', 'off') %}
