--- a/asuswrt.yaml
+++ b/asuswrt.yaml
@@ -1,3 +1,8 @@
 host: !secret router_ip
 username: !secret router_login
 ssh_key: !secret router_ssh
+sensors:
+  - upload
+  - download
+  - upload_speed
+  - download_speed
