--- a/sensor.yaml
+++ b/sensor.yaml
@@ -90,8 +90,9 @@
 - platform: mqtt
   name: sonoff_uptime
   state_topic: "sonoff/tele/STATE"
-  value_template: "{{ value_json.Uptime }}"
-  unit_of_measurement: "h"
+  #value_template: "{{ value_json.Uptime }}"
+  value_template: "{{ ((value_json.Uptime[:1] | int * 24) + (value_json.Uptime[2:4] | int) + (value_json.Uptime[5:7] | int / 60) + (value_json.Uptime[8:10] | int / 60 / 60))|round(2) }}"
+  unit_of_measurement: "hours"
 
 - platform: mqtt
   name: sonoff_rssi
@@ -102,6 +103,30 @@
 - platform: mqtt
   name: sonoff_vcc
   state_topic: "sonoff/tele/STATE"
+  value_template: "{{ value_json.Vcc }}"
+  unit_of_measurement: "V"
+
+- platform: mqtt
+  name: wemosd1_1_version
+  state_topic: "wemosd1_1/stat/STATUS2"
+  value_template: "{{ value_json['StatusFWR'].Version[:5] }}"
+
+- platform: mqtt
+  name: wemosd1_uptime
+  state_topic: "wemosd1_1/tele/STATE"
+  #value_template: "{{ value_json.Uptime }}"
+  value_template: "{{ ((value_json.Uptime[:1] | int * 24) + (value_json.Uptime[2:4] | int) + (value_json.Uptime[5:7] | int / 60) + (value_json.Uptime[8:10] | int / 60 / 60))|round(2) }}"
+  unit_of_measurement: "hours"
+
+- platform: mqtt
+  name: wemosd1_rssi
+  state_topic: "wemosd1_1/tele/STATE"
+  value_template: "{{ value_json['Wifi'].RSSI }}"
+  unit_of_measurement: "dBm"
+
+- platform: mqtt
+  name: wemosd1_vcc
+  state_topic: "wemosd1_1/tele/STATE"
   value_template: "{{ value_json.Vcc }}"
   unit_of_measurement: "V"
 
@@ -135,12 +160,12 @@
   unit_of_measurement: '°C'
   value_template: '{{ (value|int / 1000)|round(1) }}'
 
-- platform: speedtest
-  name: speedtest
-  monitored_conditions:
-    - ping
-    - download
-    - upload
+#- platform: speedtest
+#  name: speedtest
+#  monitored_conditions:
+#    - ping
+#    - download
+#    - upload
 
 - platform: cpuspeed
 
