--- a/themes/dark.yaml
+++ b/themes/dark.yaml
@@ -1,18 +1,18 @@
-dark_clear:
+dark:
   # Colors
   text-color: '#DADADB'                                                           # Grey text
   text-medium-light-color: '#A0A2A8'                                              # Medium-light grey text
   text-medium-color: '#80828A'                                                    # Medium grey text
-  text-dark-color: '#6A6B74'                                                      # Dark grey text
+  text-dark-color: '#008bef'                                                      # Dark grey text
   accent-color: '#008bef'                                                         # Blue
   accent-medium-color: '#2686c1'                                                  # Decent blue
   background-color: '#3b4049'                                                     # Dark grey background
   background-color-2: '#484E59'                                                   # Light grey background
-  background-card-color: '#363941'                                                # Grey background
+  background-card-color: '#434952'                                                # Grey background
   border-color: '#383C46'                                                         # Grey border
 
   # Header
-  primary-color: '#636B75'                                                        # Background
+  primary-color: '#363941'                                                        # Background
   text-primary-color: 'var(--text-color)'                                         # Text
   
   # Left Menu
@@ -33,7 +33,7 @@ dark_clear:
   paper-listbox-color: 'var(--text-color)'
   light-primary-color: 'var(--text-dark-color)'
   secondary-text-color: 'var(--text-medium-color)'
-  disabled-text-color: '#455a64'                                   # slider wheel
+  disabled-text-color: 'var(--text-dark-color)'
   paper-dialog-button-color: 'var(--text-color)'
   secondary-background-color: 'var(--background-color-2)'                         # Background more info title
 
@@ -47,9 +47,6 @@ dark_clear:
   paper-toggle-button-unchecked-button-color: 'var(--text-medium-light-color)'    # Knob Off
   paper-toggle-button-unchecked-bar-color: '#767682'                              # Background Off
   
-  # Sliders
-  #paper-slider-active-color: '#008bef'
-
   # Shadows
   shadow-elevation-2dp_-_box-shadow: 'inset 0px 0px 0px 1px var(--border-color)'
   shadow-elevation-4dp_-_box-shadow: 'var(--shadow-elevation-2dp_-_box-shadow)'
@@ -59,32 +56,3 @@ dark_clear:
   shadow-elevation-12dp_-_box-shadow: 'var(--shadow-elevation-2dp_-_box-shadow)'
   shadow-elevation-14dp_-_box-shadow: 'var(--shadow-elevation-2dp_-_box-shadow)'
   shadow-elevation-16dp_-_box-shadow: '0px 0px 0px 3px var(--text-dark-color)'
-
- #Changes to fix history/logbook menus
-  lumo-primary-text-color: 'var(--text-color)'
-  lumo-secondary-text-color: 'var(--text-medium-color)'
-  lumo-primary-color: 'var(--primary-color)'
-  #Calendar day numbers
-  lumo-body-text-color: 'var(--text-color)'
-  #Calendar/Date-Picker Background
-  lumo-base-color: 'var(--background-color)'
-  #Month/Year header
-  lumo-header-text-color: 'var(--lumo-body-text-color)'
-  #DayOfWeek Header
-  lumo-tertiary-text-color: 'var(--lumo-body-text-color)'
-  lumo-shade: 'var(--background-color)'
-  lumo-shade-90pct: 'rgba(34, 34, 34, .9)'
-  lumo-shade-80pct: 'rgba(34, 34, 34, .8)'
-  lumo-shade-70pct: 'rgba(34, 34, 34, .7)'
-  lumo-shade-60pct: 'rgba(34, 34, 34, .6)'
-  lumo-shade-50pct: 'rgba(34, 34, 34, .5)'
-  lumo-shade-40pct: 'rgba(34, 34, 34, .4)'
-  lumo-shade-30pct: 'rgba(34, 34, 34, .3)'
-  lumo-shade-20pct: 'rgba(34, 34, 34, .2)'
-  lumo-shade-10pct: 'rgba(34, 34, 34, .1)'
-  lumo-shade-5pct: 'rgba(34, 34, 34, .05)'
-  lumo-tint-5pct: 'var(--background-color)'
-  lumo-contrast-10pct: 'rgba(0, 0, 0, 0)'
-
-  #paper-item-icon-color
-  #disabled-text-color
